# tree-sitter-blub

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-blub.pc.in
bindings/c/tree_sitter/: tree-sitter-blub.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_blub/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterBlubTests/: TreeSitterBlubTests.swift
queries/: highlights.scm  locals.scm  tags.scm  textobjects.scm
src/: parser.c  scanner.c
